--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@ body {
   background-color: #333;
 }
 
-#main {
+main {
   max-width: 960px;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0 auto;
   background-color: #FFF;
 
